[package]
name = "atuin-common"
edition = "2024"
description = "common library for atuin"

rust-version = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enables the `test_utils` module.
test-utils = ["tracing", "dep:tracing-subscriber"]
# The `string::ellipsis` module: budget-aware, grapheme/display-width-correct
# string truncation. The module is compiled only when this feature is enabled.
unicode = ["dep:unicode-width", "dep:unicode-segmentation"]
# The `rmp` module: MessagePack encode/decode extension traits and error types.
rmp = ["dep:rmp"]
# `From<DecodeError> for eyre::Report` in the `rmp::eyre` module.
eyre = []

[dependencies]
derive_more = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
typed-builder = { workspace = true }
eyre = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
semver = { workspace = true }
thiserror = { workspace = true }
directories = { workspace = true }
sysinfo = "0.30.7"
base64 = { workspace = true }
getrandom = "0.2"
rustls = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
unicode-width = { version = "0.2", optional = true }
unicode-segmentation = { version = "1.11.0", optional = true }
rmp = { version = "0.8.14", optional = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
