[package]
name = "atuin-dotfiles"
description = "The dotfiles crate for Atuin"
edition = "2024"
version = { workspace = true }

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-client = { path = "../atuin-client", version = "18.10.0" }
atuin-common = { path = "../atuin-common", version = "18.10.0" }
crypto_secretbox = "0.1.1"

eyre = { workspace = true }
rand = { workspace = true }
rmp = { version = "0.8.14" }
serde = { workspace = true }
tokio = { workspace = true }
