[package]
name = "atuin-dotfiles"
description = "The dotfiles crate for Atuin"
edition = "2024"
version = { workspace = true }

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-common = { path = "../atuin-common", version = "18.17.1", features = ["rmp", "eyre"] }
atuin-client = { path = "../atuin-client", version = "18.17.1" }
rmp = { version = "0.8.14" }
derive_more = { workspace = true }

eyre = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
crypto_secretbox = "0.1.1"

[dev-dependencies]
rstest = { workspace = true }
