[package]
name = "atuin-hex"
edition = "2024"
description = "a terminal emulator for atuin"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { workspace = true }

[target.'cfg(all(unix, not(target_os = "illumos")))'.dependencies]
crossterm = { workspace = true }
eyre = { workspace = true }
portable-pty = "0.8"
signal-hook = "0.3"
vt100 = { workspace = true }
