[package]
name = "atuin-history"
description = "The history crate for Atuin"
edition = "2021"
version = { workspace = true }

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-client = { path = "../atuin-client", version = "18.4.0-beta.3" }
atuin-common = { path = "../atuin-common", version = "18.4.0-beta.3" }

log = { workspace = true }
time = { workspace = true }
eyre = { workspace = true }
directories = { workspace = true }
indicatif = "0.17.5"
serde = { workspace = true }
serde_json = { workspace = true }
crossterm = { version = "0.27", features = ["use-dev-tty"] }
unicode-width = "0.1"
itertools = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
interim = { workspace = true }
base64 = { workspace = true }
fs-err = { workspace = true }
whoami = { workspace = true }
semver = { workspace = true }
futures-util = "0.3"
tracing = "0.1"
uuid = { workspace = true }
unicode-segmentation = "1.11.0"
sysinfo = "0.30.7"

[dev-dependencies]
tracing-tree = "0.4"
divan = "0.1.14"
rand = { workspace = true }

[[bench]]
name = "smart_sort"
harness = false
