[package]
name = "atuin-history"
description = "The history crate for Atuin"
edition = "2024"
version = { workspace = true }

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-client = { path = "../atuin-client", version = "18.13.0-beta.2" }

time = { workspace = true }
serde = { workspace = true }
crossterm = { workspace = true, features = ["use-dev-tty"] }
unicode-segmentation = "1.11.0"

[dev-dependencies]
divan = "0.1.14"
rand = { workspace = true }

[[bench]]
name = "smart_sort"
harness = false
