[package]
name = "atuin-pty-proxy"
edition = "2024"
description = "a PTY proxy for atuin"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { workspace = true }

[target.'cfg(unix)'.dependencies]
crossterm = { workspace = true }
eyre = { workspace = true }
portable-pty = "0.9"
signal-hook = "0.3"
vt100 = { workspace = true }
