[package]
name = "atuin-scripts"
edition = "2024"
version = { workspace = true }
description = "The scripts crate for Atuin"

authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atuin-client = { path = "../atuin-client", version = "18.10.0" }
atuin-common = { path = "../atuin-common", version = "18.10.0" }
eyre = { workspace = true }
minijinja = { workspace = true }
pretty_assertions = { workspace = true }
rmp = { version = "0.8.14" }
serde = { workspace = true }
serde_json = { workspace = true }
sql-builder = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }

