[package]
name = "atuin-server-database"
edition = "2024"
description = "server database library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
atuin-common = { path = "../atuin-common", version = "18.10.0" }
eyre = { workspace = true }
serde = { workspace = true }
time = { workspace = true }

tracing = { workspace = true }
url = "2.5.2"
