[package]
name = "atuin-server-sqlite"
edition = "2024"
description = "server sqlite database library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
atuin-common = { path = "../atuin-common", version = "18.10.0" }
atuin-server-database = { path = "../atuin-server-database", version = "18.10.0" }

eyre = { workspace = true }
futures-util = "0.3"
metrics = "0.24"
serde = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "regexp"] }
time = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
