[package]
name = "atuin-server-sqlite"
edition = "2024"
description = "server sqlite database library for atuin"

version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
atuin-common = { path = "../atuin-common", version = "18.13.0-beta.2" }
atuin-server-database = { path = "../atuin-server-database", version = "18.13.0-beta.2" }

eyre = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "regexp"] }
async-trait = { workspace = true }
uuid = { workspace = true }
metrics = "0.24"
futures-util = "0.3"
